--- a/src/app/bujukiboutique/bujukiboutique.component.css
+++ b/src/app/bujukiboutique/bujukiboutique.component.css
@@ -15,3 +15,8 @@
 .example-full-width {
     width: 100%;
 }
+
+.example-header-image {
+    background-image: url('../../assets/photo/image.png');
+    background-size: cover;
+}
