--- a/src/app/bujukiboutique/bujukiboutique.component.html
+++ b/src/app/bujukiboutique/bujukiboutique.component.html
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Bujuki's Boutique</h5>
                     <div id="example">
-                        <div style="border-style: double;width: 580px;">
+                        <div style="border-style: double;">
 
                             <p style="float:right;text-align: left; padding: 10px;">Cell: 8015456354 <br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
                                 <span>7358361164</span>
