--- a/src/app/bujukiboutique/bujukiboutique.component.css
+++ b/src/app/bujukiboutique/bujukiboutique.component.css
@@ -1,5 +1,11 @@
 .myth {
     text-align: left;
+    font-size: 18px;
+    width: 35%;
+}
+
+.mytd {
+    font-size: 18px;
 }
 
 .example-form-field {
@@ -31,4 +37,9 @@ body {
     height: 148mm;
     /* border-style: solid;
     border-width: 5px; */
+}
+
+.fot {
+    border-style: ridge;
+    width: 100%;
 }
