--- a/src/app/bujukiboutique/bujukiboutique.component.html
+++ b/src/app/bujukiboutique/bujukiboutique.component.html
@@ -92,11 +92,11 @@
                             </table>
 
                             <div class="row" style="margin: 2px;">
-                                <div class="col-sm-6" style="border-style: ridge;width: 100%;text-align: center;">
+                                <div class="col-sm-6 text-center" style="border-style: ridge;width: 100%;text-align: center;">
                                     <br><br><br>
                                     <p style="padding-bottom:5px;">Party's Signature</p>
                                 </div>
-                                <div class="col-sm-6" style="border-style: ridge;width: 100%;text-align: center;">
+                                <div class="col-sm-6 text-center" style="border-style: ridge;width: 100%;text-align: center;">
                                     <b><span><b><small>For</small></b>&nbsp;Bujuki's Boutique</span>
                                     </b>
                                     <br><br><br>
