--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,22 +2,22 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-        <div class="alert alert-primary" role="alert">
-            Total Customer : {{customercount || "Loading"}}
-          </div>
-          <div class="alert alert-secondary" role="alert">
-            Total Saree Bill : {{sareebillcount || "Loading"}}
-          </div>
-          <div class="alert alert-warning" role="alert">
-           Total Product Bill : {{productbillcount || "Loading"}}
-         </div> 
-          <div class="alert alert-success" role="alert">
-            Total Saree Product : {{ sareeproductcount || "Loading"}}
-          </div>
-          <div class="alert alert-danger" role="alert">
-            Total Product : {{productcount || "Loading"}}
-          </div>
-          <!-- <div class="alert alert-info" role="alert">
+            <div class="alert alert-primary" role="alert">
+                Total Customer : {{customercount || "XXX"}}
+            </div>
+            <div class="alert alert-secondary" role="alert">
+                Total Saree Bill : {{sareebillcount || "XXX"}}
+            </div>
+            <div class="alert alert-warning" role="alert">
+                Total Product Bill : {{productbillcount || "XXX"}}
+            </div>
+            <div class="alert alert-success" role="alert">
+                Total Saree Product : {{ sareeproductcount || "XXX"}}
+            </div>
+            <div class="alert alert-danger" role="alert">
+                Total Product : {{productcount || "XXX"}}
+            </div>
+            <!-- <div class="alert alert-info" role="alert">
             This is a info alert—check it out!
           </div>
           <div class="alert alert-light" role="alert">
