--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -4,159 +4,156 @@
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header text-center">Customer</div>
-                <div class="card-body">  
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <form  [formGroup]="customerForm" autocomplete="off">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <form [formGroup]="customerForm" autocomplete="off">
 
-                    <mat-form-field  appearance="outline" class="example-full-width">
-                      <mat-label>Customer Name</mat-label>
-                      <input matInput formControlName="customername">
-                    </mat-form-field>
-                  
-                    <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>10-digit Mobile Number</mat-label>
-                        <span matPrefix>+ 91 &nbsp;</span>
-                        <input matInput formControlName="phoneumber" maxlength="10"  minlength="10">
-                      </mat-form-field>
-                      
-                      
-                      <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>Email Id</mat-label>
-                        <input matInput formControlName="emailid">
-                      </mat-form-field>
+                                <mat-form-field appearance="outline" class="example-full-width">
+                                    <mat-label>Customer Name</mat-label>
+                                    <input matInput formControlName="customername">
+                                </mat-form-field>
 
-                      <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>Aadhar</mat-label>
-                        <input matInput formControlName="adhaarid" >
-                      </mat-form-field>
-  
-                      <!-- <mat-form-field appearance="outline" class="example-full-width">                        
+                                <mat-form-field appearance="outline" class="example-full-width">
+                                    <mat-label>10-digit Mobile Number</mat-label>
+                                    <span matPrefix>+ 91 &nbsp;</span>
+                                    <input matInput formControlName="phoneumber" maxlength="10" minlength="10">
+                                </mat-form-field>
+
+
+                                <mat-form-field appearance="outline" class="example-full-width">
+                                    <mat-label>Email Id</mat-label>
+                                    <input matInput formControlName="emailid">
+                                </mat-form-field>
+
+                                <mat-form-field appearance="outline" class="example-full-width">
+                                    <mat-label>Aadhar</mat-label>
+                                    <input matInput formControlName="adhaarid">
+                                </mat-form-field>
+
+                                <!-- <mat-form-field appearance="outline" class="example-full-width">                        
                             <mat-label>Choose a date</mat-label>
                             <input matInput formControlName="date" [matDatepicker]="picker">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>                          
                       </mat-form-field> -->
-  
-                      
-                    <mat-form-field appearance="outline" class="example-full-width">
-                      <mat-label>Address</mat-label>
-                      <textarea formControlName="address" matInput ></textarea>
-                    </mat-form-field> 
 
-                    <mat-form-field appearance="outline" class="example-full-width">
-                      <mat-label>Party'S GSTIN Number</mat-label>
-                      <input matInput formControlName="partygstin" >
-                    </mat-form-field> 
 
-                      </form>                
-                  </div>
+                                <mat-form-field appearance="outline" class="example-full-width">
+                                    <mat-label>Address</mat-label>
+                                    <textarea formControlName="address" matInput></textarea>
+                                </mat-form-field>
 
-                  <div class="col-sm-8">
-                    <mat-form-field>
-                      <mat-label>Search</mat-label>
-                      <input matInput (keyup)="applyFilter($event)" placeholder="Search by Name,Phone Number" #input>
-                    </mat-form-field>
+                                <mat-form-field appearance="outline" class="example-full-width">
+                                    <mat-label>Party'S GSTIN Number</mat-label>
+                                    <input matInput formControlName="partygstin">
+                                </mat-form-field>
 
-                    <div class="example-container mat-elevation-z8">
-                      <table mat-table [dataSource]="dataSource" matSort>
-                        <!-- Item Column -->
-                        <ng-container matColumnDef="customername">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name </th>
-                          <td mat-cell *matCellDef="let customertable"> {{customertable.customername}} </td>
-                          <td mat-footer-cell *matFooterCellDef>  </td>
-                        </ng-container>
-                    
-                        <ng-container matColumnDef="phoneumber">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone Number </th>
-                          <td mat-cell *matCellDef="let customertable"> {{customertable.phoneumber}} </td>
-                          <td mat-footer-cell *matFooterCellDef>  </td>
-                        </ng-container>
+                            </form>
+                        </div>
 
-                        <ng-container matColumnDef="adhaarid">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Adhaar Number </th>
-                          <td mat-cell *matCellDef="let customertable"> {{customertable.adhaarid}} </td>
-                          <td mat-footer-cell *matFooterCellDef>  </td>
-                        </ng-container>
+                        <div class="col-sm-8">
+                            <mat-form-field>
+                                <mat-label>Search</mat-label>
+                                <input matInput (keyup)="applyFilter($event)" #input>
+                            </mat-form-field>
 
-                        <ng-container matColumnDef="partygstin">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Party's GSTIN </th>
-                          <td mat-cell *matCellDef="let customertable"> {{customertable.partygstin}} </td>
-                          <td mat-footer-cell *matFooterCellDef>  </td>
-                        </ng-container>
+                            <div class="example-container mat-elevation-z8">
+                                <table mat-table [dataSource]="dataSource" matSort>
+                                    <!-- Item Column -->
+                                    <ng-container matColumnDef="customername">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name </th>
+                                        <td mat-cell *matCellDef="let customertable"> {{customertable.customername}} </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
 
-                        <ng-container matColumnDef="address">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-                          <td mat-cell *matCellDef="let customertable"> {{customertable.address}} </td>
-                          <td mat-footer-cell *matFooterCellDef>  </td>
-                        </ng-container>
+                                    <ng-container matColumnDef="phoneumber">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone Number </th>
+                                        <td mat-cell *matCellDef="let customertable"> {{customertable.phoneumber}} </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
 
-                        <ng-container matColumnDef="emailid">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Email  </th>
-                          <td mat-cell *matCellDef="let customertable"> {{customertable.emailid}} </td>
-                          <td mat-footer-cell *matFooterCellDef>  </td>
-                        </ng-container>
-                        
-                        <!-- Cost Column -->
-                        <!-- <ng-container matColumnDef="cost">
+                                    <ng-container matColumnDef="adhaarid">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Adhaar Number </th>
+                                        <td mat-cell *matCellDef="let customertable"> {{customertable.adhaarid}} </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
+
+                                    <ng-container matColumnDef="partygstin">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Party's GSTIN </th>
+                                        <td mat-cell *matCellDef="let customertable"> {{customertable.partygstin}} </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
+
+                                    <ng-container matColumnDef="address">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+                                        <td mat-cell *matCellDef="let customertable"> {{customertable.address}} </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
+
+                                    <ng-container matColumnDef="emailid">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+                                        <td mat-cell *matCellDef="let customertable"> {{customertable.emailid}} </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
+
+                                    <!-- Cost Column -->
+                                    <!-- <ng-container matColumnDef="cost">
                           <th mat-header-cell *matHeaderCellDef> Cost </th>
                           <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
                           <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
                         </ng-container> -->
-                    
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                        <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr> -->
-                        <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
-                      </table>
-                    </div>                 
-                             
-                  </div>    
-                </div>                                     
-              </div>
-                <div class="card-footer">
-                    <div class="example-button-row">                      
-                      <button mat-raised-button (click)="onSubmit()" color="primary">Save</button>
+
+                                    <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
+                                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                    <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr> -->
+                                    <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+                                </table>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-              </div>
+                <div class="card-footer">
+                    <div class="example-button-row">
+                        <button mat-raised-button (click)="onSubmit()" color="primary">Save</button>
+                    </div>
+                </div>
             </div>
         </div>
-        <br><br>
-        <div class="row">
-          
-          <mat-form-field>
+    </div>
+    <br><br>
+    <div class="row">
+
+        <mat-form-field>
             <mat-label>Search</mat-label>
             <input matInput (keyup)="silverapplyFilter($event)" placeholder="Search by Name,Phone Number" #input>
-          </mat-form-field>
+        </mat-form-field>
 
-          <div class="example-container mat-elevation-z8">
+        <div class="example-container mat-elevation-z8">
             <table mat-table [dataSource]="silverdataSource" matSort>
-              <ng-container matColumnDef="productname">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
-                <td mat-cell *matCellDef="let customertable"> {{customertable.productname}} </td>
-                <td mat-footer-cell *matFooterCellDef>  </td>
-              </ng-container>
-          
-              <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                <td mat-cell *matCellDef="let customertable"> {{customertable.date}} </td>
-                <td mat-footer-cell *matFooterCellDef>  </td>
-              </ng-container>
+                <ng-container matColumnDef="productname">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
+                    <td mat-cell *matCellDef="let customertable"> {{customertable.productname}} </td>
+                    <td mat-footer-cell *matFooterCellDef> </td>
+                </ng-container>
 
-              <!-- <ng-container matColumnDef="total">
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+                    <td mat-cell *matCellDef="let customertable"> {{customertable.date}} </td>
+                    <td mat-footer-cell *matFooterCellDef> </td>
+                </ng-container>
+
+                <!-- <ng-container matColumnDef="total">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
                 <td mat-cell *matCellDef="let customertable"> {{customertable.adhaarid}} </td>
                 <td mat-footer-cell *matFooterCellDef>  </td>
               </ng-container> -->
-          
-              <tr mat-header-row *matHeaderRowDef="displayedColumnssilver;sticky: true"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumnssilver;"></tr>
-              <tr mat-footer-row *matFooterRowDef="displayedColumnssilver; sticky: true"></tr>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumnssilver;sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumnssilver;"></tr>
+                <tr mat-footer-row *matFooterRowDef="displayedColumnssilver; sticky: true"></tr>
             </table>
-          </div>     
         </div>
+    </div>
 </div>
-
-
-
