--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -53,17 +53,22 @@
                         </div>
 
                         <div class="col-sm-8">
+                            <div *ngIf="dataSource.data.length == 0" style="text-align: center;">
+                                <div class="spinner-grow spinner-grow-sm" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>&nbsp;Loading...
+                            </div>
                             <mat-form-field>
                                 <mat-label>Search</mat-label>
                                 <input matInput (keyup)="applyFilter($event)" #input>
                             </mat-form-field>
-
                             <div class="example-container mat-elevation-z8">
                                 <table mat-table [dataSource]="dataSource" matSort>
                                     <!-- Item Column -->
                                     <ng-container matColumnDef="customername">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable.customername}} </td>
+                                        <td mat-cell *matCellDef="let customertable"> {{customertable.customername}}
+                                        </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
