--- a/src/app/sareeproductpage/sareeproductpage.component.html
+++ b/src/app/sareeproductpage/sareeproductpage.component.html
@@ -38,6 +38,11 @@
                         </div>
 
                         <div class="col-sm-8">
+                            <div *ngIf="dataSource.data.length == 0" style="text-align: center;">
+                                <div class="spinner-grow spinner-grow-sm" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>&nbsp;Loading...
+                            </div>
                             <mat-form-field appearance="outline">
                                 <mat-label>Search</mat-label>
                                 <input matInput (keyup)="applyFilter($event)" #input>
@@ -54,7 +59,8 @@
 
                                     <ng-container matColumnDef="sareeproductname">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable?.sareeproductname}}
+                                        <td mat-cell *matCellDef="let customertable">
+                                            {{customertable?.sareeproductname}}
                                         </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
@@ -74,7 +80,8 @@
 
                                     <ng-container matColumnDef="sareerate">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate </th>
-                                        <td mat-cell *matCellDef="let customertable">&#8377;&nbsp;{{customertable?.sareerate}} </td>
+                                        <td mat-cell *matCellDef="let customertable">
+                                            &#8377;&nbsp;{{customertable?.sareerate}} </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
@@ -156,7 +163,8 @@
 
                             <ng-container matColumnDef="sareerate">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate </th>
-                                <td mat-cell *matCellDef="let customertable">&#8377;&nbsp;{{customertable?.sareerate}} </td>
+                                <td mat-cell *matCellDef="let customertable">&#8377;&nbsp;{{customertable?.sareerate}}
+                                </td>
                                 <td mat-footer-cell *matFooterCellDef> </td>
                             </ng-container>
 
